--- a/index.html
+++ b/index.html
@@ -1,36 +1,148 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gabriela NVM – Economist</title>
+  <title>Gabriela Noemi Villalba Marecos</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Gabriela NVM</h1>
-    <p>PhD Candidate in Economics</p>
-
-    <section>
-      <h2>About Me</h2>
-      <p>I am a PhD candidate in Economics with research interests in [add here].</p>
-    </section>
-
-    <section>
-      <h2>CV</h2>
-      <p><a href="cv.pdf" target="_blank">Download my CV (PDF)</a></p>
-    </section>
-
-    <section>
-      <h2>Links</h2>
+  <header>
+    <nav>
       <ul>
-        <li><a href="https://scholar.google.com/">Google Scholar</a></li>
-        <li><a href="https://orcid.org/">ORCID</a></li>
-        <li><a href="https://github.com/">GitHub</a></li>
-        <li><a href="mailto:your.email@domain.com">Email Me</a></li>
+        <li><a href="#about">Home</a></li>
+        <li><a href="#cv">CV</a></li>
+        <li><a href="#teaching">Teaching</a></li>
+        <li><a href="#research">Research</a></li>
+        <li><a href="#journey">PhD Journey</a></li>
+        <li><a href="#media">Media and Resources</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="container">
+    <section id="about">
+      <img src="https://via.placeholder.com/150" alt="Profile photo" class="profile-pic">
+      <h1>Gabriela Noemi Villalba Marecos</h1>
+      <p>Welcome to my personal webpage! Here you can find my research, publications, and contact information. I will also share reflections, comments, and resources related to my work.</p>
+
+      <h2>About Me</h2>
+      <p>I am a PhD candidate at the University of Sussex, specializing in <strong>Applied Microeconomics</strong>, with a focus on <strong>education, labor economics, and development economics</strong>.</p>
+      <p>My research examines the effects of public policies on educational quality, labor market inequalities, and higher education outcomes. I am particularly interested in <strong>causal inference methods</strong>, including <em>Difference-in-Differences (DiD)</em> and <em>Event Study designs with Instrumental Variables (IV)</em>.</p>
+      <p>I often explore themes of <strong>development and inequality</strong> in the context of <strong>Latin America</strong>, where education and labor market dynamics present unique challenges and opportunities.</p>
+      <p>Beyond research, I am passionate about <strong>policy evaluation, social mobility, and the intersection of education and labor market outcomes</strong>. This website shares <em>research insights, reflections, and useful resources</em> for those interested in <strong>education policy, labor markets, inequality, and applied econometrics</strong>.</p>
+    </section>
+
+    <section id="research">
+      <h2>Research Interests</h2>
+      <ul>
+        <li>Applied Microeconomics</li>
+        <li>Economics of Education</li>
+        <li>Labour Market</li>
+        <li>Policy Evaluation</li>
+        <li>Quantitative Research Methods</li>
       </ul>
     </section>
-  </div>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:gv68@sussex.ac.uk">gv68@sussex.ac.uk</a></p>
+      <p>Find me on <a href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
+    </section>
+  
+<section id="teaching">
+  <h2>Teaching</h2>
+  <h3>Philosophy</h3>
+  <p>I am committed to inclusive and applied teaching, where students engage critically with real-world data and policy challenges. I aim to foster analytical skills and independent thinking through active learning and clear communication.</p>
+
+  <h3>Current Teaching</h3>
+  <ul>
+    <li><strong>Doctoral Tutor</strong> – Quantitative Methods for Business and Economics (QMBE), University of Sussex (2025)</li>
+    <li><strong>Doctoral Tutor</strong> – Mathematics and Programming, University of Sussex (2024–present)</li>
+  </ul>
+
+  <h3>Past Teaching</h3>
+  <ul>
+    <li><strong>Teaching Assistant</strong> – Economic Growth, Universidad Nacional de Asunción (2021–2024)</li>
+    <li><strong>Teaching Assistant</strong> – Macroeconomics, Universidad Nacional de Asunción (2021)</li>
+  </ul>
+
+  <h3>Workshops and Training</h3>
+  <ul>
+    <li><strong>Workshop Facilitator</strong> – Applied Data Analysis</li>
+  </ul>
+</section>
+
+<section id="research">
+  <h2>Research</h2>
+  <p>My research focuses on applied microeconomics, particularly education, labour markets, and development in Latin America.</p>
+
+  <h3>Current Research Projects</h3>
+  <ul>
+    <li><strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia:</strong> Instrumental variables, DiD and Event Study</li>
+    <li><strong>Gender Pay Gap and Labour Market Dynamics in Paraguay:</strong> Evidence from pseudo-panels and decomposition methods.</li>
+  </ul>
+
+  <h3>Publications</h3>
+  <ul>
+    <li>Lovera, D. & Villalba, G. (2022). Diagnóstico del Desarrollo. <em>Ciencias Económicas, 3</em>(5), 90–106.</li>
+    <li>Villalba, G. (2022). Gender Pay Gap: Evidence from Paraguay, 2018–2021. MSc Dissertation, University of Sussex.</li>
+  </ul>
+</section>
+
+<section id="media">
+  <h2>Media and Resources</h2>
+
+  <h3>Resources for Students</h3>
+  <ul>
+    <li><a href="#">Intro to Quantitative Methods – handout (PDF)</a></li>
+    <li><a href="#">Understanding Difference-in-Differences – slides (PDF)</a></li>
+    <li><a href="#">Research Tools & Data Sources – quick guide</a></li>
+  </ul>
+
+  <h3>Talks and Public Engagement</h3>
+  <ul>
+    <li><a href="#">Interview with Sussex Latin American Network (audio)</a></li>
+    <li><a href="#">Conference Slides: Gender Gaps in Paraguay</a></li>
+  </ul>
+
+  <h3>Reflections and Blog</h3>
+  <p>This space will include short reflections, fieldnotes, and commentary on education, development, and the journey of doing research from Latin America to the UK.</p>
+  <p><em>Coming soon...</em></p>
+
+  <h3>Useful Links</h3>
+  <ul>
+    <li><a href="https://dimewiki.worldbank.org" target="_blank">World Bank DIME Wiki</a></li>
+    <li><a href="https://www.res.org.uk" target="_blank">Royal Economic Society</a></li>
+  </ul>
+</section>
+
+
+<section id="journey">
+  <h2>The Path to My Dreams</h2>
+  <p>Some journeys are not drawn on a map but grow within, like roots quietly weaving through the soil until they find daylight. Mine began in Asunción, Paraguay, nurtured by the wisdom of those who taught me to believe in the power of education.</p>
+
+  <h3>Origins</h3>
+  <p>I am Gabriela Noemí Villalba Marecos. I grew up in a middle-class family in a country where resources and opportunities are often unequally distributed. At Colegio San Cristóbal, where I graduated as valedictorian, I always enjoyed a variety of disciplines. I stood out both in sciences and humanities, but it was the unique combination of mathematics and social sciences that captivated me. It felt like finding a compass that would guide my future steps, and led me to study Economics.</p>
+  <p>I am also the first in my family to pursue postgraduate studies abroad — a step I carry with both pride and responsibility. My grandmothers, who never finished primary school, passed down a profound respect for education to my parents. That quiet wisdom, carried across generations, laid the foundation for everything that followed.</p>
+  <p>Thanks to my academic performance, I earned the Itaipú Scholarship for undergraduate studies, ranking among the top ten nationally. That was the first concrete step in what I now call "the path to my dreams" — a path paved not only with talent and opportunity, but with effort and sacrifice.</p>
+
+  <h3>Building Dreams Through Effort</h3>
+  <p>At the Universidad Nacional de Asunción (UNA), I became an active member of the student committee, organising academic and outreach activities. These roles shaped my sense of community, of learning beyond the classroom, and of the power of shared purpose.</p>
+  <p>It was also at UNA that I encountered development economics — and something clicked. I became fascinated by inequality, poverty, and the mechanics of mobility. My professors not only taught theory but transmitted a belief: that economics could be used to understand and improve the world. That message has stayed with me ever since.</p>
+
+  <h3>Master’s as a Turning Point</h3>
+  <p>In 2021, I earned a place in the MSc in Development Economics at the University of Sussex, supported by the Business School International Master's Award. Moving from Paraguay to the UK meant stepping into a new country, a new system, a new language — all at once. It required courage and resilience, and it was far from easy.</p>
+  <p>But it was transformative. I deepened my training in causal inference and wrote my dissertation on the gender wage gap in Paraguay, using pseudo-panels and decomposition methods — connecting data, rigorous analysis, and questions that felt deeply personal. I completed the degree with Distinction, and my dissertation received the same honour — a recognition that meant more than just a grade, but a quiet validation of the journey behind it.</p>
+  <p>At Sussex, I met mentors who helped me through moments of doubt. One professor reminded me that while we may all begin at different points, what matters is where we arrive. But what marked me the most was that my thesis supervisor became a guide not only in research but in resilience. She showed me that applied microeconomics — with all the mathematics, statistics, and econometrics I love — only becomes meaningful when it is driven by questions with heart and purpose. Her kindness, clarity, and confidence in my work gave me the reassurance I needed to trust in the value of what I was doing and strengthened my commitment to research.</p>
+
+  <h3>The PhD Dream</h3>
+  <p>Today, I am pursuing a PhD in Economics at the University of Sussex. My research focuses on accreditation policies and higher education outcomes in Colombia, using difference-in-differences and event-study designs with administrative data.</p>
+  <p>I am deeply grateful to my country for the support of the BECAL Scholarship, which is making it possible to pursue this dream. The PhD is not a straight road — it does not get easier, but instead becomes more layered, more challenging, and more meaningful. Each stage demands something new, and gives something deeper in return.</p>
+  <p>I carry with me the lessons of my family, my professors, my country, and those who believed in me. Through research, teaching, and policy work, I hope not only to give back what I’ve received, but also to help others — especially children and young people in Paraguay — to reach goals that once felt out of reach. I am determined to keep going. One day, I hope my journey might help open doors for others, too.</p>
+  <p>Although I haven’t named them here, I hope that the teachers and mentors who shaped me might one day read these words and recognise themselves — because I carry their influence in every step I take.</p>
+</section>
+
+</main>
 </body>
 </html>
