--- a/research.html
+++ b/research.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gabriela Noemi Villalba Marecos</title>
+  <title>Research - Gabriela Noemi Villalba Marecos</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -19,15 +18,17 @@
       </ul>
     </nav>
   </header>
-
   <main class="container">
-    <h1>Gabriela Noemi Villalba Marecos</h1>
-    <p>PhD Candidate in Economics – University of Sussex</p>
-    <p>Welcome to my academic webpage. You can explore my research, teaching, journey, and resources.</p>
-
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:gv68@sussex.ac.uk">gv68@sussex.ac.uk</a></p>
-    <p>Find me on <a href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
+    <section id="research">
+      <h2>Research Interests</h2>
+      <ul>
+        <li>Applied Microeconomics</li>
+        <li>Economics of Education</li>
+        <li>Labour Market</li>
+        <li>Policy Evaluation</li>
+        <li>Quantitative Research Methods</li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
