--- a/index.html
+++ b/index.html
@@ -21,9 +21,27 @@
   </header>
 
   <main class="container">
+    <img src="https://via.placeholder.com/150" alt="Profile photo" class="profile-pic">
     <h1>Gabriela Noemi Villalba Marecos</h1>
-    <p>PhD Candidate in Economics – University of Sussex</p>
-    <p>Welcome to my academic webpage. You can explore my research, teaching, journey, and resources.</p>
+    <p>Welcome to my personal webpage! Here you can find my research, publications, and contact information. I will also share reflections, comments, and resources related to my work.</p>
+
+    <h2>About Me</h2>
+    <p>I am a PhD candidate at the University of Sussex, specializing in <strong>Applied Microeconomics</strong>, with a focus on <strong>education, labor economics, and development economics</strong>.</p>
+    <p>My research examines the effects of public policies on educational quality, labor market inequalities, and higher education outcomes. I am particularly interested in <strong>causal inference methods</strong>, including <em>Difference-in-Differences (DiD)</em> and <em>Event Study designs with Instrumental Variables (IV)</em>.</p>
+    <p>I often explore themes of <strong>development and inequality</strong> in the context of <strong>Latin America</strong>, where education and labor market dynamics present unique challenges and opportunities.</p>
+    <p>Beyond research, I am passionate about <strong>policy evaluation, social mobility, and the intersection of education and labor market outcomes</strong>. This website shares <em>research insights, reflections, and useful resources</em> for those interested in <strong>education policy, labor markets, inequality, and applied econometrics</strong>.</p>
+
+    <h2>CV</h2>
+    <p><a href="cv.pdf" target="_blank">Download my CV (PDF)</a></p>
+
+    <h2>Research Interests</h2>
+    <ul>
+      <li>Applied Microeconomics</li>
+      <li>Economics of Education</li>
+      <li>Labour Market</li>
+      <li>Policy Evaluation</li>
+      <li>Quantitative Research Methods</li>
+    </ul>
 
     <h2>Contact</h2>
     <p>Email: <a href="mailto:gv68@sussex.ac.uk">gv68@sussex.ac.uk</a></p>
