--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <main class="container">
-    <img src="Profile_new.jpg" alt="Profile_new.jpg" class="profile-pic">
+    <img src="Profile_new.jpg" alt="Profile_new.jpg" class="profile-pic" style="width: 150px; height: auto; border-radius: 50%;">
     <h1>Gabriela Noemi Villalba Marecos</h1>
     <p>Welcome to my personal webpage! Here you can find my research, publications, and contact information. I will also share reflections, comments, and resources related to my work.</p>
 
