--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main class="container">
     <img src="Profile_new_resized.jpg" alt="Profile_new_resized.jpg" class="profile-pic">
     <h1>Gabriela Noemi Villalba Marecos</h1>
-    <p>Welcome to my personal webpage! Here you can find my research, publications, and contact information. I will also share reflections, comments, and resources related to my work.</p>
+    <p>Welcome to my academic corner! Here you can explore my research interests, working papers, and teaching. I also share insights, reflections, and resources that guide my work in economics and development.</p>
 
     <h2>About Me</h2>
     <p>I am a PhD candidate at the University of Sussex, specializing in <strong>Applied Microeconomics</strong>, with a focus on <strong>education, labor economics, and development economics</strong>.</p>
