--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>Welcome to my academic corner! Here you can explore my research interests, working papers, and teaching. I also share insights, reflections, and resources that guide my work in economics and development. </p>
 
     <h2>About Me</h2>
-    <p>I am a PhD candidate at the University of Sussex, specializing in <strong>Applied Microeconomics</strong>, with a focus on <strong>education, labor economics, and development economics</strong>.</p>
+    <p>I am a PhD candidate at the University of Sussex, specializing in <strong>Applied Microeconomics</strong>, with a focus on <strong> economics of education, labor markets, and development economics</strong>.</p>
     <p>My research examines the effects of public policies on educational quality, labor market inequalities, and higher education outcomes. I am particularly interested in <strong>causal inference methods</strong>, including <em>Difference-in-Differences (DiD)</em> and <em>Event Study designs with Instrumental Variables (IV)</em>.</p>
     <p>I often explore themes of <strong>development and inequality</strong> in the context of <strong>Latin America</strong>, where education and labor market dynamics present unique challenges and opportunities.</p>
     <p>Beyond research, I am passionate about <strong>policy evaluation, social mobility, and the intersection of education and labor market outcomes</strong>. This website shares <em>research insights, reflections, and useful resources</em> for those interested in <strong>education policy, labor markets, inequality, and applied econometrics</strong>.</p>
