--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     <p>Welcome to my academic corner! Here you can explore my research interests, working papers, and teaching. I also share insights, reflections, and resources that guide my work in economics and development. </p>
 
     <h2>About Me</h2>
-    <p>I am a PhD candidate at the University of Sussex, specializing in <strong>Applied Microeconomics</strong>, with a focus on <strong> economics of education, labor markets, and development economics</strong>.</p>
-    <p>My research examines the effects of public policies on educational quality, labor market inequalities, and higher education outcomes. I am particularly interested in <strong>causal inference methods</strong>, including <em>Difference-in-Differences (DiD)</em> and <em>Event Study designs with Instrumental Variables (IV)</em>.</p>
-    <p>I often explore themes of <strong>development and inequality</strong> in the context of <strong>Latin America</strong>, where education and labor market dynamics present unique challenges and opportunities.</p>
-    <p>Beyond research, I am passionate about <strong>policy evaluation, social mobility, and the intersection of education and labor market outcomes</strong>. This website shares <em>research insights, reflections, and useful resources</em> for those interested in <strong>education policy, labor markets, inequality, and applied econometrics</strong>.</p>
+    <p>I am a PhD candidate at the University of Sussex, specializing in <strong>Applied Microeconomics</strong>, with a focus on the economics of education, labour markets, and development economics.</p>
+    <p>My research examines the effects of public policies on educational quality, labour market inequalities, and higher education outcomes. I am particularly interested in <strong>causal inference methods</strong>, including including the use of Instrumental Variables (IV), Difference-in-Differences (DiD), and Event Study designs.</em>.</p>
+    <p>I often explore themes of <strong>development and inequality</strong> in the context of <strong>Latin America</strong>, where education and labour market dynamics present unique challenges and opportunities.</p>
+    <p>Beyond my core research, I am also interested in <strong>gender, social mobility</strong>, and the dynamics of <strong>less traditional markets</strong> — from fashion and sports to cultural behaviors. I’m drawn to understanding how economic forces shape, and are shaped by, the choices people make in these unique spaces.</p>
+    <p>This website is a space where I share research insights, reflections, and resources — especially for those interested in education policy, inequality, and the many stories behind my journey</p>
 
+    
     <h2>CV</h2>
     <p><a href="cv.pdf" target="_blank">Download my CV (PDF)</a></p>
 
