--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <h2>About Me</h2>
     <p>I am a PhD candidate at the University of Sussex, specializing in <strong>Applied Microeconomics</strong>, with a focus on the economics of education, labour markets, and development economics.</p>
-    <p>My research examines the effects of public policies on educational quality, labour market inequalities, and education outcomes. I am particularly interested in <strong>causal inference methods</strong>, including including the use of Instrumental Variables (IV), Difference-in-Differences (DiD), and Event Study designs</p>
+    <p>My research examines the effects of public policies on educational quality, labour market inequalities, and education outcomes. I am particularly interested in <strong>causal inference methods</strong>, including the use of Instrumental Variables (IV), Difference-in-Differences (DiD), and Event Study designs.</p>
     <p>I often explore themes of <strong>development and inequality</strong> in the context of <strong>Latin America</strong>, where education and labour market dynamics present unique challenges and opportunities.</p>
-    <p>Beyond my core research, I am also interested in <strong>gender, social mobility</strong>, and the dynamics of <strong>less traditional markets</strong> — from fashion and sports to cultural behaviors. I’m drawn to understanding how economic forces shape, and are shaped by, the choices people make in these unique spaces.</p>
-    <p>This website is a space where I share research insights, reflections, and resources — especially for those interested in education policy, inequality, and the some stories behind my journey</p>
+    <p>Beyond my core research, I am also interested in <strong>gender, social mobility</strong>, and the dynamics of <strong>less traditional markets</strong> — from fashion and sports to cultural behaviors. I’m drawn to understanding how economic forces shape and are shaped by, the choices people make in these unique spaces.</p>
+    <p>This website is a space where I share research insights, reflections, and resources, especially for those interested in education policy, inequality, and the stories behind my journey.</p>
 
     
     <h2>CV</h2>
