--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </ul>
 
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:gv68@sussex.ac.uk">gv68@sussex.ac.uk</a></p>
+    <p>Email: <a href="mailto:g.villalba-marecos@sussex.ac.uk">g.villalba-marecos@sussex.ac.uk</a></p>
     <p>Find me on <a href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
   </main>
 </body>
