--- a/phd-journey.html
+++ b/phd-journey.html
@@ -39,8 +39,8 @@
 
   <h3>The PhD Dream</h3>
   <p>Today, I am pursuing a PhD in Economics at the University of Sussex. Aiming to produce research with purpose... that matters.</p>
-  <p>I am deeply grateful to my country for the support of the BECAL Scholarship, which is making it possible to pursue this dream. The PhD is not a straight road — it does not get easier, but instead becomes more layered, more challenging, and more meaningful. Each stage demands something new, and gives something deeper in return.</p>
-  <p>I carry with me the lessons of my family, my professors, my country, and those who believed in me. Through research, teaching, and policy work, I hope not only to give back what I’ve received, but also to help others — especially children and young people in Paraguay — to reach goals that once felt out of reach. I am determined to keep going. One day, I hope my journey might help open doors for others, too.</p>
+  <p>I am deeply grateful to my country for the support of the BECAL Scholarship, which is making it possible to pursue this dream. The PhD is not a straightforward path — it does not get easier, but instead becomes more complex, more challenging, and more meaningful. Each stage demands something new, and gives something deeper in return.</p>
+  <p>I carry with me the lessons of my family, my professors, my country, and those who believed in me. Through research, teaching, and policy work, I hope not only to give back what I’ve received but also to help others, to reach goals that once felt out of reach. I am determined to keep going. One day, I hope my journey might help open doors for others, too.</p>
   <p>Although I haven’t named them here, I hope that the teachers and mentors who shaped me might one day read these words and recognise themselves — because I carry their influence in every step I take.</p>
 </section>
   </main>
