--- a/research.html
+++ b/research.html
@@ -18,15 +18,45 @@
       </ul>
     </nav>
   </header>
+
   <main class="container">
-    <section id="research">
-      <h2>Research Interests</h2>
+    <section class="content-section">
+      <h2>Research</h2>
+
+      <h3>Ongoing Research</h3>
       <ul>
-        <li>Applied Microeconomics</li>
-        <li>Economics of Education</li>
-        <li>Labour Market</li>
-        <li>Policy Evaluation</li>
-        <li>Quantitative Research Methods</li>
+        <li>
+          <strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia</strong><br>
+          PhD project using Difference-in-Differences and Event Study designs with administrative data to evaluate institutional accreditation impacts.
+        </li>
+      </ul>
+
+      <h3>Working Papers</h3>
+      <ul>
+        <li>
+          <strong>Gender Pay Gap: Evidence from Paraguay, 2018–2021</strong><br>
+          Working paper based on MSc dissertation at the University of Sussex. Uses pseudo-panels and decomposition methods to study wage inequality.
+        </li>
+      </ul>
+
+      <h3>Publications</h3>
+      <ul>
+        <li>
+          <strong>Diagnosis of Development in Paraguay, 2001–2020</strong><br>
+          <em>Ciencias Económicas</em>, 3(5), 90–106 (2022). Co-authored with D. Lovera.
+        </li>
+      </ul>
+
+      <h3>Other Research</h3>
+      <ul>
+        <li>
+          <strong>Impact of the Microfinance Product "Committee of Women Entrepreneurs" on Poverty Reduction</strong><br>
+          Undergraduate thesis, Universidad Nacional de Asunción (2019).
+        </li>
+        <li>
+          <strong>A Glass of Milk in Paraguay</strong><br>
+          Poster presented at UNA Research Conference (2017).
+        </li>
       </ul>
     </section>
   </main>
