--- a/media.html
+++ b/media.html
@@ -24,19 +24,18 @@
 
   <h3>Resources for Students</h3>
   <ul>
-    <li><a href="#">Intro to Quantitative Methods – handout (PDF)</a></li>
-    <li><a href="#">Understanding Difference-in-Differences – slides (PDF)</a></li>
+    <li><a href="#">Intro to Quantitative Methods – (PDF)</a></li>
+    <li><a href="#"> Web Scrapping- Good Practices – slides (PDF)</a></li>
     <li><a href="#">Research Tools & Data Sources – quick guide</a></li>
   </ul>
 
   <h3>Talks and Public Engagement</h3>
   <ul>
-    <li><a href="#">Interview with Sussex Latin American Network (audio)</a></li>
     <li><a href="#">Conference Slides: Gender Gaps in Paraguay</a></li>
   </ul>
 
   <h3>Reflections and Blog</h3>
-  <p>This space will include short reflections, fieldnotes, and commentary on education, development, and the journey of doing research from Latin America to the UK.</p>
+  <p>This space will include short reflections and commentary on education, development, and the journey of doing research from Latin America to the UK.</p>
   <p><em>Coming soon...</em></p>
 
   <h3>Useful Links</h3>
