--- a/research.html
+++ b/research.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Research - Gabriela Noemi Villalba Marecos</title>
   <link rel="stylesheet" href="style.css" />
+  <meta name="description" content="Research projects, working papers, publications and research in progress by Gabriela Noemi Villalba Marecos." />
 </head>
 <body>
   <header>
-    <nav>
-      <ul>
+    <nav aria-label="Main">
+      <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="teaching.html">Teaching</a></li>
-        <li><a href="research.html">Research</a></li>
+        <li aria-current="page"><a href="research.html">Research</a></li>
         <li><a href="phd-journey.html">PhD Journey</a></li>
         <li><a href="media.html">Media and Resources</a></li>
       </ul>
@@ -21,44 +22,104 @@
 
   <main class="container">
     <section class="content-section">
-      <h2>Research</h2>
+      <h1>Research</h1>
 
-      <h3>Ongoing Research</h3>
-      <ul>
-        <li>
-          <strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia</strong><br>
-          PhD project using Difference-in-Differences and Event Study designs with administrative data to evaluate institutional accreditation impacts.
-        </li>
-      </ul>
+      <nav class="toc" aria-label="Section navigation">
+        <a href="#ongoing">Ongoing Projects</a>
+        <a href="#working-papers">Working Papers</a>
+        <a href="#in-progress">Research in Progress</a>
+        <a href="#publications">Publications</a>
+        <a href="#submitted">Submitted</a>
+      </nav>
 
-      <h3>Working Papers</h3>
-      <ul>
-        <li>
-          <strong>Gender Pay Gap: Evidence from Paraguay, 2018–2021</strong><br>
-          Working paper based on MSc dissertation at the University of Sussex. Uses pseudo-panels and decomposition methods to study wage inequality.
-        </li>
-      </ul>
+      <!-- Ongoing -->
+      <section id="ongoing" class="research-section">
+        <h2>Ongoing Projects</h2>
+        <article class="paper">
+          $1
+          <div class="paper-links">
+            <a class="btn" href="files/accreditation_colombia_slides.pdf" target="_blank" rel="noopener">📑 Slides (PDF)</a>
+            <a class="btn ghost" href="files/accreditation_colombia_draft.pdf" target="_blank" rel="noopener">📄 Draft (PDF)</a>
+          </div>
+        </article>
+        <article class="paper">
+          $1
+          <div class="paper-links">
+            <a class="btn" href="files/tlevels_uk_slides.pdf" target="_blank" rel="noopener">📑 Slides (PDF)</a>
+            <a class="btn ghost" href="files/tlevels_uk_proposal.pdf" target="_blank" rel="noopener">📄 Proposal (PDF)</a>
+          </div>
+        </article>
+      </section>
 
-      <h3>Publications</h3>
-      <ul>
-        <li>
-          <strong>Diagnosis of Development in Paraguay, 2001–2020</strong><br>
-          <em>Ciencias Económicas</em>, 3(5), 90–106 (2022). Co-authored with D. Lovera.
-        </li>
-      </ul>
+      <!-- Working Papers -->
+      <section id="working-papers" class="research-section">
+        <h2>Working Papers</h2>
+        <article class="paper">
+          $1
+          <div class="paper-links">
+            <a class="btn" href="files/gender_pay_gap_paraguay_slides.pdf" target="_blank" rel="noopener">📑 Slides (PDF)</a>
+            <a class="btn ghost" href="files/gender_pay_gap_paraguay_draft.pdf" target="_blank" rel="noopener">📄 Draft (PDF)</a>
+          </div>
+        </article>
+      </section>
 
-      <h3>Other Research</h3>
-      <ul>
-        <li>
-          <strong>Impact of the Microfinance Product "Committee of Women Entrepreneurs" on Poverty Reduction</strong><br>
-          Undergraduate thesis, Universidad Nacional de Asunción (2019).
-        </li>
-        <li>
-          <strong>A Glass of Milk in Paraguay</strong><br>
-          Poster presented at UNA Research Conference (2017).
-        </li>
-      </ul>
+      <!-- Research in Progress -->
+      <section id="in-progress" class="research-section">
+        <h2>Research in Progress</h2>
+        <article class="paper">
+          <h3 class="paper-title">Information and Adjustment of Expectations: Evidence from a Peruvian Program</h3>
+          <p class="paper-meta">With M. Bazan & D. Quispe · Field experiment with survey and administrative data</p>
+          <p class="paper-desc">Design, harmonisation, and econometric analysis of a study on expectations and academic performance in Peru.</p>
+        </article>
+        <article class="paper">
+          $1
+          <div class="paper-links">
+            <a class="btn" href="files/cdm_paraguay_slides.pdf" target="_blank" rel="noopener">📑 Slides (PDF)</a>
+            <a class="btn ghost" href="files/cdm_paraguay_tech_note.pdf" target="_blank" rel="noopener">🧾 Tech Note (PDF)</a>
+          </div>
+        </article>
+      </section>
+
+      <!-- Publications -->
+      <section id="publications" class="research-section">
+        <h2>Publications</h2>
+        <article class="paper">
+          <h3 class="paper-title">Diagnóstico del Desarrollo. Paraguay, 2001–2020</h3>
+          <p class="paper-meta">Lovera, D. & Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.</p>
+        </article>
+      </section>
+
+          <!-- Submitted -->
+      <section id="submitted" class="research-section">
+        <h2>Submitted</h2>
+        <article class="paper">
+          <h3 class="paper-title">Brechas de aprendizaje en Paraguay: Un análisis aplicado de determinantes y desigualdades con datos del SNEPE 2018</h3>
+          <p class="paper-meta">Lovera, D. & Villalba, G. (2025). Submitted to <em>Población y Desarrollo</em>, FCE–UNA.</p>
+        </article>
+      </section>
     </section>
   </main>
+
+  <footer class="site-footer">
+    <p>© <span id="year"></span> Gabriela Noemi Villalba Marecos</p>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+  <style>
+    .nav {list-style:none;display:flex;gap:.75rem;padding:.5rem 0;margin:0}
+    .nav a{text-decoration:none}
+    .toc{display:flex;flex-wrap:wrap;gap:.5rem;margin:1rem 0}
+    .toc a{font-size:.95rem}
+    .research-section{margin:2rem 0}
+    .paper{padding:1rem 1.25rem;border:1px solid #e7e7e7;border-radius:12px;margin:.85rem 0}
+    .paper-title{margin:.25rem 0 .35rem}
+    .paper-meta{margin:.15rem 0 .4rem;color:#555}
+    .paper-links{display:flex;gap:.5rem;flex-wrap:wrap;margin-top:.4rem}
+    .btn{display:inline-block;padding:.45rem .75rem;border-radius:8px;text-decoration:none;border:1px solid #0a9396}
+    .btn:hover{transform:translateY(-1px)}
+    .btn.ghost{background:transparent}
+  </style>
 </body>
 </html>
