--- a/research.html
+++ b/research.html
@@ -9,60 +9,42 @@
   <style>
     :root{
       --bg:#0f172a;          /* slate-900 */
-      --card:#111827;        /* gray-900 */
+      --panel:#111827;       /* gray-900 */
       --muted:#94a3b8;       /* slate-400 */
       --text:#e5e7eb;        /* gray-200 */
-      --accent:#22c55e;      /* green-500 */
-      --accent-2:#38bdf8;    /* sky-400 */
-      --ring:rgba(56,189,248,.35);
+      --border:rgba(148,163,184,.22);
+      --accent:#38bdf8;      /* sky-400 */
     }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;line-height:1.6}
-    a{color:var(--accent-2);text-decoration:none}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;line-height:1.65}
+    a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
-    header{position:sticky;top:0;z-index:10;background:linear-gradient(0deg, rgba(15,23,42,.6), rgba(15,23,42,.9));backdrop-filter:saturate(150%) blur(6px);border-bottom:1px solid rgba(148,163,184,.15)}
-    nav{max-width:1100px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;padding:14px 20px}
-    nav .brand{font-weight:700;letter-spacing:.2px}
+    header{background:var(--panel);border-bottom:1px solid var(--border);position:sticky;top:0;z-index:10}
+    nav{max-width:980px;margin:0 auto;padding:12px 16px}
     nav ul{list-style:none;display:flex;gap:18px;margin:0;padding:0}
     nav a{color:var(--text);opacity:.9}
-    nav a[aria-current="page"]{color:white}
+    nav a[aria-current="page"]{opacity:1}
 
-    .container{max-width:1100px;margin:0 auto;padding:28px 20px}
+    .container{max-width:980px;margin:0 auto;padding:28px 16px}
+    h1{font-size:clamp(26px,3vw,36px);margin:6px 0 10px;font-weight:800}
+    h2{font-size:20px;margin:24px 0 8px}
+    p.lead{color:var(--muted);margin:0 0 18px}
 
-    .page-title{font-size:clamp(28px,3.2vw,40px);margin:8px 0 20px;font-weight:800}
-    .subtitle{color:var(--muted);margin:0 0 22px}
+    /* Simple list look, keeping your original structure */
+    .section{background:var(--panel);border:1px solid var(--border);border-radius:14px;padding:18px;margin:18px 0}
+    .section h2{margin-top:0}
+    ul.clean{margin:8px 0 0 0;padding-left:18px}
+    ul.clean li{margin:10px 0}
+    strong{font-weight:700}
+    .meta{color:var(--muted)}
 
-    .section{margin:28px 0}
-    .section h3{margin:0 0 14px;font-size:22px}
-
-    .item-list{display:grid;grid-template-columns:1fr;gap:14px}
-    @media (min-width:720px){.item-list{grid-template-columns:repeat(2,1fr)}}
-
-    .card{background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.01));border:1px solid rgba(148,163,184,.18);border-radius:16px;padding:18px;position:relative}
-    .card:hover{border-color:rgba(56,189,248,.45);box-shadow:0 0 0 3px var(--ring)}
-    .title{font-weight:700;margin:0 0 6px}
-    .meta{font-size:14px;color:var(--muted);margin:0 0 8px}
-    .tags{display:flex;flex-wrap:wrap;gap:6px;margin-top:8px}
-    .tag{font-size:12px;color:#0b1220;background:linear-gradient(180deg,#67e8f9,#22d3ee);padding:4px 8px;border-radius:999px;font-weight:700}
-    .actions{display:flex;gap:8px;flex-wrap:wrap;margin-top:10px}
-    .btn{display:inline-flex;align-items:center;gap:8px;border:1px solid rgba(148,163,184,.28);padding:8px 12px;border-radius:12px;color:var(--text);background:#0b1328;cursor:pointer}
-    .btn:hover{border-color:rgba(56,189,248,.6)}
-    .btn.accent{background:#052e1b;border-color:rgba(34,197,94,.55)}
-    .btn svg{width:16px;height:16px}
-
-    details.pdf{margin-top:10px;border:1px dashed rgba(148,163,184,.35);border-radius:12px}
-    details.pdf>summary{cursor:pointer;user-select:none;padding:10px 12px}
-    details.pdf[open]{box-shadow:0 0 0 3px var(--ring)}
-    .pdf-frame{width:100%;height:min(75vh,900px);border:0;border-top:1px dashed rgba(148,163,184,.2)}
-
-    footer{border-top:1px solid rgba(148,163,184,.15);margin-top:28px}
-    .foot{max-width:1100px;margin:0 auto;padding:18px 20px;font-size:14px;color:var(--muted)}
+    /* Optional tiny badge for PDF links without preview */
+    .badge{display:inline-block;border:1px solid var(--border);border-radius:999px;padding:2px 8px;font-size:12px;margin-left:8px}
   </style>
 </head>
 <body>
   <header>
     <nav>
-      <div class="brand">GNV • Research</div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="teaching.html">Teaching</a></li>
@@ -74,93 +56,14 @@
   </header>
 
   <main class="container">
-    <h1 class="page-title">Publications & Research</h1>
-    <p class="subtitle">Selected work in labor, education, and innovation economics. PDF previews are available where indicated.</p>
+    <h1>Publications & Research</h1>
+    <p class="lead">Concise list of publications, submissions, and ongoing work.</p>
 
-    <!-- Publications -->
     <section class="section" id="publications">
-      <h3>Publications</h3>
-      <div class="item-list">
-        <article class="card">
-          <h4 class="title">Diagnóstico del Desarrollo. Paraguay, 2001–2020</h4>
-          <p class="meta">Lovera, D. &amp; Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.</p>
-          <p>A macro-structural overview of Paraguay’s development over two decades.</p>
-          <div class="actions">
-            <!-- Replace the href with your public PDF link or DOI -->
-            <a class="btn" href="#" target="_blank" rel="noopener">
-              <!-- link icon -->
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M10 13a5 5 0 0 0 7.07 0l1.17-1.17a5 5 0 0 0-7.07-7.07L9 6"/><path d="M14 11a5 5 0 0 1-7.07 0L5.76 9.83a5 5 0 1 1 7.07-7.07L15 4"/></svg>
-              Journal page
-            </a>
-            <button class="btn accent" data-toggle-pdf data-pdf="assets/papers/diagnostico-desarrollo-2022.pdf">
-              <!-- file icon -->
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><path d="M14 2v6h6"/></svg>
-              View PDF
-            </button>
-          </div>
-          <details class="pdf">
-            <summary>Preview</summary>
-            <iframe class="pdf-frame" loading="lazy"></iframe>
-          </details>
-        </article>
-      </div>
-    </section>
-
-    <!-- Submitted -->
-    <section class="section" id="submitted">
-      <h3>Submitted</h3>
-      <div class="item-list">
-        <article class="card">
-          <h4 class="title">Brechas de aprendizaje en Paraguay: determinantes y desigualdades (SNEPE 2018)</h4>
-          <p class="meta">Lovera, D. &amp; Villalba, G. (2025). Submitted to <em>Población y Desarrollo</em>, FCE–UNA.</p>
-          <p>Evidence on learning gaps using standardized assessment data and multivariate models.</p>
-          <div class="actions">
-            <button class="btn" data-toggle-pdf data-pdf="assets/papers/brechas-aprendizaje-submitted.pdf">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><path d="M14 2v6h6"/></svg>
-              View Manuscript
-            </button>
-          </div>
-          <details class="pdf"><summary>Preview</summary><iframe class="pdf-frame" loading="lazy"></iframe></details>
-        </article>
-      </div>
-    </section>
-
-    <!-- Research in Progress -->
-    <section class="section" id="rip">
-      <h3>Research in Progress</h3>
-      <div class="item-list">
-        <article class="card">
-          <h4 class="title">Gender Pay Gap Structure in a Middle-Income Country: Evidence from Paraguay</h4>
-          <p class="meta">Villalba, G. (2025). Draft prepared for CAF–WELAC 2025 Conference. (Derived from MSc Dissertation, University of Sussex, 2022).</p>
-          <p>Pseudo-panel methods, Oaxaca–Blinder and RIF regressions to study the gap across the distribution.</p>
-          <div class="actions">
-            <button class="btn" data-toggle-pdf data-pdf="assets/papers/gender-pay-gap-draft.pdf">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><path d="M14 2v6h6"/></svg>
-              View Draft
-            </button>
-          </div>
-          <details class="pdf"><summary>Preview</summary><iframe class="pdf-frame" loading="lazy"></iframe></details>
-          <div class="tags"><span class="tag">Labor</span><span class="tag">Gender</span><span class="tag">Distribution</span></div>
-        </article>
-
-        <article class="card">
-          <h4 class="title">Information and Adjustment of Expectations: Evidence from a Peruvian Program</h4>
-          <p class="meta">Bazan, M., Quispe, D., &amp; Villalba, G. (2025). Field experiment with survey & administrative data.</p>
-          <p>Randomized information & expectation updating; outcomes in education and aspirations.</p>
-          <div class="actions">
-            <button class="btn" data-toggle-pdf data-pdf="assets/papers/peru-expectations-preanalysis.pdf"> 
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><path d="M14 2v6h6"/></svg>
-              Pre-analysis Plan
-            </button>
-          </div>
-          <details class="pdf"><summary>Preview</summary><iframe class="pdf-frame" loading="lazy"></iframe></details>
-          <div class="tags"><span class="tag">RCT</span><span class="tag">Education</span></div>
-        </article>
-
-        <article class="card">
-          <h4 class="title">Innovation and Productivity in Paraguay: Evidence from a CDM Model</h4>
-          <p class="meta">Olmedo, S. &amp; Villalba, G. (2025). Crépon–Duguet–Mairesse framework.</p>
-          <p>Three-stage CDM with service & manufacturing firms, measuring broad innovation and productivity.</p>
-          <div class="actions">
-            <button class="btn" data-toggle-pdf data-pdf="assets/papers/cdm-paraguay-working.pdf">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M14 2H6a
+      <h2>Publications</h2>
+      <ul class="clean">
+        <li>
+          <strong>Diagnóstico del Desarrollo. Paraguay, 2001–2020.</strong>
+          <span class="meta">Lovera, D. & Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.</span>
+          <!-- Optional: add a public link if available -->
+          <!-- <a class="badge" href="#
