--- a/research.html
+++ b/research.html
@@ -66,4 +66,56 @@
           <strong>Diagnóstico del Desarrollo. Paraguay, 2001–2020.</strong>
           <span class="meta">Lovera, D. & Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.</span>
           <!-- Optional: add a public link if available -->
-          <!-- <a class="badge" href="#
+          <!-- <a class="badge" href="#" target="_blank" rel="noopener">PDF</a> -->
+        </li>
+      </ul>
+    </section>
+
+    <section class="section" id="submitted">
+      <h2>Submitted</h2>
+      <ul class="clean">
+        <li>
+          <strong>Brechas de aprendizaje en Paraguay: Un análisis aplicado de determinantes y desigualdades con datos del SNEPE 2018.</strong>
+          <span class="meta">Lovera, D. & Villalba, G. (2025). Submitted to <em>Población y Desarrollo</em>, FCE–UNA.</span>
+          <!-- <a class="badge" href="assets/papers/brechas-aprendizaje-submitted.pdf" target="_blank" rel="noopener">PDF</a> -->
+        </li>
+      </ul>
+    </section>
+
+    <section class="section" id="rip">
+      <h2>Research in Progress</h2>
+      <ul class="clean">
+        <li>
+          <strong>Gender Pay Gap Structure in a Middle-Income Country: Evidence from Paraguay.</strong>
+          <span class="meta">Villalba, G. (2025). Draft for CAF–WELAC 2025. Derived from MSc Dissertation, University of Sussex (2022).</span>
+          <!-- <a class="badge" href="assets/papers/gender-pay-gap-draft.pdf" target="_blank" rel="noopener">PDF</a> -->
+        </li>
+        <li>
+          <strong>Information and Adjustment of Expectations: Evidence from a Peruvian Program.</strong>
+          <span class="meta">Bazan, M., Quispe, D., & Villalba, G. (2025). Field experiment.</span>
+          <!-- <a class="badge" href="assets/papers/peru-expectations-preanalysis.pdf" target="_blank" rel="noopener">Pre-analysis PDF</a> -->
+        </li>
+        <li>
+          <strong>Innovation and Productivity in Paraguay: Evidence from a CDM Model.</strong>
+          <span class="meta">Olmedo, S. & Villalba, G. (2025).</span>
+          <!-- <a class="badge" href="assets/papers/cdm-paraguay-working.pdf" target="_blank" rel="noopener">PDF</a> -->
+        </li>
+      </ul>
+    </section>
+
+    <section class="section" id="phd">
+      <h2>PhD Dissertation & Projects</h2>
+      <ul class="clean">
+        <li>
+          <strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia.</strong>
+          <span class="meta">Villalba, G. (ongoing). PhD Project.</span>
+        </li>
+        <li>
+          <strong>The Impact of T Levels on Education and Labour Market Outcomes in the UK.</strong>
+          <span class="meta">Villalba, G. (ongoing). PhD Project.</span>
+        </li>
+      </ul>
+    </section>
+  </main>
+</body>
+</html>
