--- a/research.html
+++ b/research.html
@@ -1,36 +1,68 @@
-<main class="container">
-  <section class="content-section">
-    <h2>Publications & Research</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Research – Gabriela Noemi Villalba Marecos</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
+        <li><a href="research.html" class="active">Research</a></li>
+        <li><a href="phd-journey.html">PhD Journey</a></li>
+        <li><a href="media.html">Media and Resources</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <h3>Publications</h3>
-    <ul>
-      <li>
-        <strong>Diagnóstico del Desarrollo. Paraguay, 2001–2020.</strong><br>
-        Lovera, D. & Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.
-        <!-- opcional -->
-        <a href="assets/papers/diagnostico-desarrollo-2022.pdf" target="_blank">[PDF]</a>
-      </li>
-    </ul>
+  <main class="container research">
+    <h1>Publications & Research</h1>
 
-    <h3>Submitted</h3>
-    <ul>
-      <li>
-        <strong>Brechas de aprendizaje en Paraguay...</strong><br>
-        Lovera, D. & Villalba, G. (2025). Submitted to <em>Población y Desarrollo</em>, FCE–UNA.
-      </li>
-    </ul>
+     <section>
+      <h2>PhD Research</h2>
+      <ul class="pub-list">
+        <li class="pub-item">
+          <span class="citation"><strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia.</strong> <span class="note">(PhD Project)</span></span>
+        </li>
+        <li class="pub-item">
+          <span class="citation"><strong>The Impact of T Levels on Education and Labour Market Outcomes in the UK.</strong> <span class="note">(PhD Project)</span></span>
+        </li>
+      </ul>
+    </section>
+    
+    <section>
+      <h2>Publications</h2>
+      <ul class="pub-list">
+        <li class="pub-item">
+          <span class="citation">
+            <strong>Diagnóstico del Desarrollo. Paraguay, 2001–2020.</strong><br>
+            Lovera, D. &amp; Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.
+            <a class="tag" href="papers/diagnostico_paraguay.pdf" target="_blank">PDF</a>
+          </span>
+        </li>
+      </ul>
+    </section>
 
-    <h3>Research in Progress</h3>
-    <ul>
-      <li><strong>Gender Pay Gap Structure in Paraguay.</strong><br> Draft for CAF–WELAC 2025.</li>
-      <li><strong>Information and Adjustment of Expectations (Peru).</strong><br> Field experiment.</li>
-      <li><strong>Innovation and Productivity in Paraguay (CDM).</strong></li>
-    </ul>
 
-    <h3>PhD Dissertation & Projects</h3>
-    <ul>
-      <li><strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia.</strong> (PhD Project)</li>
-      <li><strong>The Impact of T Levels on Education and Labour Market Outcomes in the UK.</strong> (PhD Project)</li>
-    </ul>
-  </section>
-</main>
+    <section>
+      <h2>Research in Progress</h2>
+      <ul class="pub-list">
+        <li class="pub-item">
+          <span class="citation"><strong>Sticky Floors and Gendered Labour Structures: Discrimination, Education, and Household Barriers in Paraguay.</strong><br>Draft for CAF–WELAC 2025.</span>
+        </li>
+        <li class="pub-item">
+          <span class="citation"><strong>Information and Adjustment of Expectations (Peru).</strong><br>Field experiment.</span>
+        </li>
+        <li class="pub-item">
+          <span class="citation"><strong>Innovation and Productivity in Paraguay (CDM).</strong></span>
+        </li>
+      </ul>
+    </section>
+
+  </main>
+</body>
+</html>
