--- a/research.html
+++ b/research.html
@@ -26,10 +26,10 @@
       <h2>PhD Research</h2>
       <ul class="pub-list">
         <li class="pub-item">
-          <span class="citation"><strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia.</strong> <span class="note">(PhD Project)</span></span>
+          <span class="citation"><strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia.</strong>
         </li>
         <li class="pub-item">
-          <span class="citation"><strong>The Impact of T Levels on Education and Labour Market Outcomes in the UK.</strong> <span class="note">(PhD Project)</span></span>
+          <span class="citation"><strong>The Impact of T Levels on Education Outcomes in the UK.</strong>
         </li>
       </ul>
     </section>
