--- a/research.html
+++ b/research.html
@@ -5,6 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Research – Gabriela Noemi Villalba Marecos</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Minimal extras to keep summaries tidy even without editing style.css */
+    .pub-list { list-style: none; padding-left: 0; }
+    .pub-item { margin: 0 0 1.25rem 0; }
+    .citation .summary {
+      display: block;
+      margin-top: 0.35rem;
+      font-size: 0.95rem;
+      line-height: 1.45;
+      color: #555;
+    }
+    .citation em { color: #666; }
+    .tag { margin-left: .5rem; font-size: 0.9rem; }
+    .research h2 { margin-top: 2rem; }
+    .active { font-weight: 600; text-decoration: underline; }
+    .container { max-width: 900px; margin: 0 auto; padding: 1rem; }
+  </style>
 </head>
 <body>
   <header>
@@ -22,18 +39,30 @@
   <main class="container research">
     <h1>Publications & Research</h1>
 
-     <section>
+    <!-- PhD Research -->
+    <section>
       <h2>PhD Research</h2>
       <ul class="pub-list">
         <li class="pub-item">
-          <span class="citation"><strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia.</strong>
+          <span class="citation">
+            <strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia.</strong>
+            <span class="summary">
+              This project evaluates the impact of Colombia’s mandatory high-quality accreditation policy on student outcomes in teacher training programmes. Using administrative data (SNIES, ICFES) and quasi-experimental methods (event study, IV), it examines whether accreditation improves student learning and how effects vary by institution type.
+            </span>
+          </span>
         </li>
         <li class="pub-item">
-          <span class="citation"><strong>The Impact of T Levels on Education Outcomes in the UK.</strong>
+          <span class="citation">
+            <strong>The Impact of T Levels on Education Outcomes in the UK.</strong>
+            <span class="summary">
+              This project studies how the rollout of T Levels influences post-16 educational choices, completion, and equity across gender, socioeconomic background, and regions in England. Combining Difference-in-Differences estimates with a structural choice model, it explores mechanisms such as stigma, availability, and policy counterfactuals.
+            </span>
+          </span>
         </li>
       </ul>
     </section>
-    
+
+    <!-- Publications -->
     <section>
       <h2>Publications</h2>
       <ul class="pub-list">
@@ -41,24 +70,46 @@
           <span class="citation">
             <strong>Diagnóstico del Desarrollo. Paraguay, 2001–2020.</strong><br>
             Lovera, D. &amp; Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.
-            <a class="tag" href="papers/diagnostico_paraguay.pdf" target="_blank">PDF</a>
+            <a class="tag" href="papers/diagnostico_paraguay.pdf" target="_blank" rel="noopener">PDF</a>
           </span>
         </li>
       </ul>
     </section>
 
-
+    <!-- Research in Progress -->
     <section>
       <h2>Research in Progress</h2>
       <ul class="pub-list">
         <li class="pub-item">
-          <span class="citation"><strong>Sticky Floors and Gendered Labour Structures: Discrimination, Education, and Household Barriers in Paraguay.</strong><br>Draft for CAF–WELAC 2025.</span>
+          <span class="citation">
+            <strong>Sticky Floors and Gendered Labour Structures: Discrimination, Education, and Household Barriers in Paraguay.</strong><br>
+            Draft for CAF–WELAC 2025.<br>
+            <em>Co-author(s):</em> <span class="coauthors">TBD</span><br>
+            <span class="summary">
+              This paper investigates the gender pay gap in Paraguay, highlighting structural barriers that keep women in low-wage positions. It examines education, household constraints, and labour segmentation to explain the persistence of “sticky floors.”
+            </span>
+          </span>
         </li>
+
         <li class="pub-item">
-          <span class="citation"><strong>Information and Adjustment of Expectations (Peru).</strong><br>Field experiment.</span>
+          <span class="citation">
+            <strong>Information and Adjustment of Expectations (Peru).</strong><br>
+            Field experiment.<br>
+            <em>Co-authors:</em> <span class="coauthors">Muchin Bazan (PUC Chile), Diego Esteban Quispe (PUC Perú)</span><br>
+            <span class="summary">
+              A randomized field experiment that measures how providing information about previous cohorts’ performance affects students’ academic expectations and choices in a competitive summer program in Peru.
+            </span>
+          </span>
         </li>
+
         <li class="pub-item">
-          <span class="citation"><strong>Innovation and Productivity in Paraguay (CDM).</strong></span>
+          <span class="citation">
+            <strong>Innovation and Productivity in Paraguay (CDM).</strong><br>
+            <em>Co-author:</em> <span class="coauthors">Selva Olmedo</span><br>
+            <span class="summary">
+              Application of the Crépon–Duguet–Mairesse model to Paraguayan firm-level data. The study explores how innovation activities, knowledge protection, and sectoral heterogeneity affect productivity in manufacturing and services.
+            </span>
+          </span>
         </li>
       </ul>
     </section>
